# seqLister

./: .gitignore  README.build.instr  README.md  setup.cfg
src/seqLister/: __init__.py
tests/: runTest  testSeqLister.out  testSeqLister.py
