[metadata]
name = seqLister
version = 0.0.1
author = James Rowell
author_email = info@alpha-eleven.com
description = Package to expand and contract simple vfx-standard frame-range syntax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrowellfx/seqLister
project_urls =
    Bug Tracker = https://github.com/jrowellfx/seqLister/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD-3-Clause
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

