[metadata]
name = seqLister
version = 0.0.4
author = James Rowell
author_email = james@alpha-eleven.com
description = Python library to expand and condense integer-sequences using a simple syntax widely used within the VFX-industry for specifying frame-ranges.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrowellfx/seqLister
project_urls =
    Bug Tracker = https://github.com/jrowellfx/seqLister/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

